# pybind11_auto_stub

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  pyproject.toml
scripts/: build.sh
